[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
show_collision = true

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="PlayerJumpTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 0.785398
rotating = true
current = true

[node name="MusicalPhraseTimer" type="Timer" parent="."]

[connection signal="tree_entered" from="." to="." method="_on_Level_tree_entered"]
[connection signal="timeout" from="PlayerJumpTimer" to="." method="_on_PlayerJumpTimer_timeout"]
